--- a/action.yml
+++ b/action.yml
@@ -53,10 +53,10 @@ runs:
         POST_TITLE=$(sed -E 's/[[:space:]|[:punct:]]/_/g' <<<'${{ inputs.title }}')
         cat <<'EOF' > docs/"${POST_TITLE}".md
         ---
-        layout: post
-        title: "${{ inputs.title }}"
-        date: ${{ inputs.created_at }}
-        update: ${{ inputs.updated_at }}
+        Title: "${{ inputs.title }}"
+        -- | --
+        Create Date | ${{ inputs.created_at }}
+        Update Date | ${{ inputs.updated_at }}
         ---
         ${{ inputs.body }}
         EOF
