--- a/action.yml
+++ b/action.yml
@@ -45,14 +45,14 @@ runs:
     - id: generate-markdown-file
       name: Turn comment into file
       shell: bash
-      if: ${{ inputs.label_name != 'index' }}
       run: |
         DATE="${{ inputs.created_at }}"
         mkdir -p ${{ inputs.dir }}
         # useing '' to wrap the title to escapse backticks
         # and quates to wrap title in post body is to escapse backticks in jekyll building
         POST_TITLE=$(sed -E 's/[[:space:]|[:punct:]]/_/g' <<<'${{ inputs.title }}')
-        cat <<'EOF' > docs/"${POST_TITLE}".md
+        if [ "${{ inputs.label_name }}" != "index" ];then
+        cat <<'EOF' >  docs/"${POST_TITLE}".md
         ---
         Title | ${{ inputs.title }}
         -- | --
@@ -61,19 +61,11 @@ runs:
         ---
         ${{ inputs.body }}
         EOF
-    - id: generate-index-markdown-file
-      name: Turn comment into file
-      shell: bash
-      if: ${{ inputs.label_name == 'index' }}
-      run: |
-        DATE="${{ inputs.created_at }}"
-        mkdir -p ${{ inputs.dir }}
-        # useing '' to wrap the title to escapse backticks
-        # and quates to wrap title in post body is to escapse backticks in jekyll building
-        POST_TITLE=$(sed -E 's/[[:space:]|[:punct:]]/_/g' <<<'${{ inputs.title }}')
+        else
         cat <<'EOF' > docs/"${POST_TITLE}".md
         ${{ inputs.body }}
         EOF
+        fi
     - name: Push changes to repo
       shell: bash
       run: |
