--- a/action.yml
+++ b/action.yml
@@ -51,7 +51,7 @@ runs:
         # useing '' to wrap the title to escapse backticks
         # and quates to wrap title in post body is to escapse backticks in jekyll building
         POST_TITLE=$(sed -E 's/[[:space:]|[:punct:]]/_/g' <<<'${{ inputs.title }}')
-        if [ "${{ inputs.label_name }}" != "index" ];then
+        if [ "${{ inputs.title }}" != "_sidebar" ];then
         cat <<'EOF' >  docs/"${POST_TITLE}".md
         ---
         Title | ${{ inputs.title }}
