--- a/action.yml
+++ b/action.yml
@@ -61,7 +61,7 @@ runs:
         -- | --
         Create Date | `${{ inputs.created_at }}`
         Update Date | `${{ inputs.updated_at }}`
-        Edit Link | `[edit](https://github.com/${{ github.repository }}/issues/${{ inputs.number }})`
+        Edit Link | `<a href="https://github.com/${{ github.repository }}/issues/${{ inputs.number }}">edit</a>`
         ---
         ${{ inputs.body }}
         EOF
