--- a/action.yml
+++ b/action.yml
@@ -54,19 +54,11 @@ runs:
         # useing '' to wrap the title to escapse backticks
         # and quates to wrap title in post body is to escapse backticks in jekyll building
         POST_TITLE=$(sed -E 's/[[:space:]|[:punct:]]/_/g' <<<'${{ inputs.title }}')
-        if [ "${{ inputs.title }}" != "_sidebar" ];then
-        cat <<'EOF' >  docs/"${POST_TITLE}".md
-        ---
-        Title | ${{ inputs.title }}
-        -- | --
-        Create Date | `${{ inputs.created_at }}`
-        Update Date | `${{ inputs.updated_at }}`
-        Edit link | [here](https://github.com/${{ github.repository }}/issues/${{ inputs.number }})
-        
-        ---
+        if [ "${{ inputs.title }}" == "_sidebar" ];then
+        cat <<'EOF' > docs/"${POST_TITLE}".md
         ${{ inputs.body }}
         EOF
-        elif [ "${{ inputs.title }}" != "README" ];then
+        elif [ "${{ inputs.title }}" == "README" ];then
         cat <<'EOF' >  docs/"${POST_TITLE}".md
         ---
         Title | ${{ inputs.title }}
@@ -78,7 +70,15 @@ runs:
         ${{ inputs.body }}
         EOF
         else
-        cat <<'EOF' > docs/"${POST_TITLE}".md
+        cat <<'EOF' >  docs/"${POST_TITLE}".md
+        ---
+        Title | ${{ inputs.title }}
+        -- | --
+        Create Date | `${{ inputs.created_at }}`
+        Update Date | `${{ inputs.updated_at }}`
+        Edit link | [here](https://github.com/${{ github.repository }}/issues/${{ inputs.number }})
+        
+        ---
         ${{ inputs.body }}
         EOF
         fi
