--- a/action.yml
+++ b/action.yml
@@ -60,6 +60,8 @@ runs:
         if [ "${{ inputs.title }}" == "_sidebar" ];then
         cat <<'EOF' > docs/"${POST_TITLE}".md
         ${{ inputs.body }}
+        
+        [![](https://img.shields.io/badge/%2B-Edit%20Sidebar-brightgreen)](https://github.com/${{ github.repository }}/issues/${{ inputs.number }})
         EOF
         elif [ ${{inputs.nohead}} == "true" ];then
         cat <<'EOF' > docs/"${POST_TITLE}".md
