--- a/action.yml
+++ b/action.yml
@@ -81,9 +81,10 @@ runs:
         ${{ inputs.body }}
         EOF
         else
-        TITLE_ORG=$(echo $(printf '%04d' ${{ inputs.number }})_${{ inputs.title }})
+        ISSUE4NUMBER=$(printf '%04d' ${{ inputs.number }})
+        ls ${{ inputs.dir }}/$ISSUE4NUMBER_*
         echo $TITLE_ORG
-        POST_TITLE=$(sed -E 's/[[:space:]|[:punct:]]/_/g' <<< $TITLE_ORG)
+        POST_TITLE=$(sed -E 's/[[:space:]|[:punct:]]/_/g' <<< $ISSUE4NUMBER_${{ inputs.title }})
         cat <<'EOF' >  docs/"${POST_TITLE}".md
         ---
         Title | ${{ inputs.title }}
