--- a/action.yml
+++ b/action.yml
@@ -82,8 +82,7 @@ runs:
         EOF
         else
         ISSUE4NUMBER=$(printf '%04d' ${{ inputs.number }})
-        ls ${{ inputs.dir }}/${ISSUE4NUMBER}_*
-        echo $TITLE_ORG
+        ls ${{ inputs.dir }}/${ISSUE4NUMBER}_* |xargs -i rm {}
         POST_TITLE=$(sed -E 's/[[:space:]|[:punct:]]/_/g' <<< ${ISSUE4NUMBER}_${{ inputs.title }})
         cat <<'EOF' >  docs/"${POST_TITLE}".md
         ---
