--- a/action.yml
+++ b/action.yml
@@ -83,7 +83,7 @@ runs:
         else
         ISSUE4NUMBER=$(printf '%04d' ${{ inputs.number }})
         ls ${{ inputs.dir }}/${ISSUE4NUMBER}_* |xargs -i rm {}
-        POST_TITLE=${ISSUE4NUMBER}_$(sed -E 's/[[:space:]|[:punct:]]/_/g' <<< ${{ inputs.title }})
+        POST_TITLE=${ISSUE4NUMBER}_$(sed -E 's/[[:space:]|[:punct:]]/_/g' <<< '${{ inputs.title }}')
         cat <<'EOF' >  docs/"${POST_TITLE}".md
         ---
         Title | ${{ inputs.title }}
