--- a/action.yml
+++ b/action.yml
@@ -102,15 +102,22 @@ runs:
         ${{ inputs.body }}
         EOF
         fi
+        mkdir -p "${{ inputs.dir }}/bk/media"
+        echo "doc_title=${POST_TITLE}" >> "$GITHUB_ENV"
+    - uses: docker://pandoc/latex:2.9
+      with:
+        args: -f gfm "${{ inputs.dir }}/${{ env.doc_title }}".md -o "${{ inputs.dir }}/bk/${{ env.doc_title }}".md --extract-media=media -w gfm
     - name: Push changes to repo
       shell: bash
       run: |
+        
+        cp media/* "${{ inputs.dir }}/bk/media"
         REMOTE=https://${{ inputs.GITHUB_TOKEN }}@github.com/${{ github.repository }}
         git config user.email "${{ inputs.actor }}@users.noreply.github.com"
         git config user.name "${{ inputs.actor }}"
         git pull ${REMOTE}
         git checkout ${{ inputs.branch }}
-        git add .
+        git add "${{ inputs.dir }}"
         git status
         git commit -am "Add new comment"
         git push ${REMOTE} ${{ inputs.branch }}
