--- a/action.yml
+++ b/action.yml
@@ -104,7 +104,6 @@ runs:
         fi
         mkdir -p "${{ inputs.dir }}/bk/media"
         echo "doc_title=${POST_TITLE}" >> "$GITHUB_ENV"
-        mkdir -p media
     - uses: docker://pandoc/latex:2.9
       with:
         args: -f gfm "${{ inputs.dir }}/${{ env.doc_title }}".md -o "${{ inputs.dir }}/bk/${{ env.doc_title }}".md --extract-media=media -w gfm
@@ -112,7 +111,7 @@ runs:
       shell: bash
       run: |
         
-        cp media/* "${{ inputs.dir }}/bk/media"
+        cp media/* "${{ inputs.dir }}/bk/media" 2>/dev/null
         REMOTE=https://${{ inputs.GITHUB_TOKEN }}@github.com/${{ github.repository }}
         git config user.email "${{ inputs.actor }}@users.noreply.github.com"
         git config user.name "${{ inputs.actor }}"
