--- a/action.yml
+++ b/action.yml
@@ -65,6 +65,7 @@ runs:
         echo ${IN_TITLE}
         ROOTTITLE="# [${IN_TITLE}](https://github.com/${{ github.repository }}/issues/${{ inputs.number }})"
         echo ${ROOTTITLE}
+        sed -i '1i\'"${ROOTTITLE}"'' "${{ inputs.dir }}/${POST_TITLE}".md
     - name: Push changes to repo
       shell: bash
       run: |
